# acrostic-club

./: .firebaserc  .gitignore  .gitmodules  ACKNOWLEDGEMENTS  Cargo.toml  README.md  firebase.json
.firebase/: hosting.YnVpbGQvc2l0ZQ.cache  hosting.cHVibGlj.cache
core/: Cargo.toml
core/src/: letter.rs  lib.rs
generator/: Cargo.toml  download.sh
generator/src/: add_letters.rs  auto_morph.rs  banned.rs  chat.rs  chat_client.rs  cluedb.rs  clues.rs  conflict_set.rs  dict.rs  etymology.rs  lemma.rs  letter.rs  main.rs  model.rs  morphology.rs  ontology.rs  puzzle.rs  quote.rs  search.rs  segment.rs  site.rs  string.rs  subseq.rs  trie.rs  trie_table.rs  turtle.rs
generator/src/gpt/: cache_client.rs  chat_client.rs  json.rs  key_value_file.rs  mod.rs  rate_backoff_client.rs  rate_limit_client.rs  retry_client.rs  semaphore_client.rs  types.rs
generator/src/llm/: cache_client.rs  chat_client.rs  json.rs  key_value_file.rs  mod.rs  rate_limit_client.rs  retry_client.rs  rpcs.rs
generator/src/serialize/: decode.rs  encode.rs  mod.rs  offset_ref.rs
generator/src/turtle/: db.rs  graph.rs  mod.rs  parse.rs  wordnet.rs
generator/src/util/: alloc.rs  average.rs  clock.rs  interrupt.rs  lazy_async.rs  mod.rs  parallel.rs  persist.rs  rate_backoff.rs  rate_limit.rs
player/: index.html  script.js  styles.css
public/: script.js  styles.css
public/puzzles/: puzzle4.json
puzzle2/: stage0.json  stage1.json  stage2.json  stage3.json
puzzle3/: stage0.json  stage1.json  stage2.json  stage3.json
puzzle4/: stage0.json  stage2.json  stage3.json
puzzle5/: stage2.json  stage3.json  stage4.json
puzzles/0/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/1/: stage0.json
puzzles/10/: stage0.json
puzzles/100086/: stage0.json  stage1.json
puzzles/10013/: stage0.json  stage1.json
puzzles/104332/: stage0.json  stage1.json
puzzles/104772/: stage0.json  stage1.json
puzzles/10517/: stage1.json  stage2.json  stage3.json  stage4.json
puzzles/106436/: stage0.json  stage1.json
puzzles/106792/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/107718/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/108145/: stage0.json  stage1.json
puzzles/108164/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/108608/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/108788/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/10908/: stage0.json  stage1.json  stage2.json  stage3.json
puzzles/11/: stage0.json
puzzles/112299/: stage0.json  stage1.json
puzzles/112581/: stage0.json  stage1.json
puzzles/112789/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/113239/: stage0.json  stage1.json
puzzles/113244/: stage0.json  stage1.json
puzzles/113724/: stage0.json  stage1.json
puzzles/113781/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/114218/: stage0.json  stage1.json
puzzles/114449/: stage0.json  stage1.json  stage2.json  stage3.json
puzzles/11461/: stage1.json  stage2.json  stage3.json  stage4.json
puzzles/114639/: stage0.json  stage1.json  stage2.json  stage3.json
puzzles/114811/: stage0.json  stage1.json
puzzles/114829/: stage0.json  stage1.json
puzzles/115525/: stage0.json  stage1.json
puzzles/116391/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/117172/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/117451/: stage0.json  stage1.json
puzzles/117890/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/119743/: stage0.json  stage1.json
puzzles/119751/: stage0.json  stage1.json
puzzles/119949/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/122007/: stage0.json  stage1.json
puzzles/122040/: stage0.json  stage1.json  stage2.json  stage3.json
puzzles/122312/: stage0.json  stage1.json  stage2.json  stage3.json
puzzles/122545/: stage0.json  stage1.json
puzzles/122840/: stage0.json  stage1.json  stage2.json  stage3.json
puzzles/123233/: stage0.json  stage1.json  stage2.json  stage3.json
puzzles/123432/: stage0.json  stage1.json
puzzles/124690/: stage0.json  stage1.json
puzzles/126531/: stage0.json  stage1.json
puzzles/126723/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/127108/: stage0.json  stage1.json
puzzles/127211/: stage0.json  stage1.json
puzzles/127236/: stage0.json  stage1.json  stage2.json  stage3.json  stage4.json
puzzles/127701/: stage0.json  stage1.json
puzzles/127984/: stage0.json  stage1.json
puzzles/128517/: stage0.json  stage1.json
puzzles/129221/: stage0.json  stage1.json  stage2.json  (+2 more)
server/: Cargo.toml  deploy.sh  local.sh
server/src/: key_val.rs  main.rs  watch.rs
src/: alloc.rs  bin.rs  build_quotes.rs  build_trie.rs  chat.rs  dict.rs  flat_dict.rs  flat_trie.rs  flat_trie_table.rs  lazy_async.rs  letter.rs  lib.rs  main.rs  model.rs  puzzle.rs  quote.rs  search.rs  segment.rs  site.rs  trie.rs  trie_table.rs
(+3002 files in other folders)
