[package]
name = "acrostic-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde-pickle = "1.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
memmap = "0.7.0"
npy = "0.4.0"
npy-derive = "0.4.0"
ndarray-npy = "0.8.1"
ndarray = "0.15.6"
brotli = "3.5.0"
ordered-float = { version = "3.9.2", features = ["serde"] }
rand = "0.8.5"
tikv-jemallocator = "0.5"
hex = "0.4.3"
partition = "0.1.2"
itertools = "0.10.5"
arrayvec = "0.7.6"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs", "io-util","signal"] }
serde_json = "1.0.135"
unicode-segmentation = "1.12.0"
home = "0.5.11"
csv = "1.3.1"
futures = "0.3.31"
rand_xorshift = "0.3.0"
acrostic-core = { path = "../core" }
any_ascii = "0.1.7"
anyhow = "1.0.95"
#turtle-syntax = { path = "../submodules/turtle-syntax" }
codespan-reporting = "0.11.1"
locspan = "0.7.16"
rio_turtle = "0.8.5"
rio_api = "0.8.5"
ustr = "0.9.0"
bincode = "1.3.3"
safe-once-async = { path = "../../safe-once-async",features = ["tokio-rt"] }
parking_lot = "0.12.3"
tempfile = "3.15.0"
reqwest = { version = "0.11.27", features = ["json"] }
chrono = { version = "0.4.39", features = ["serde"] }
backoff = "0.4.0"
smallvec = "1.13.2"
safe-once-map = { path = "../../safe-once-map" }
safe-once = { path = "../../safe-once" }
num_cpus = "1.16"
bumpalo = "3.16.0"
pin-project = "1"
pinned-init = "0.0.6"
rkyv = { version = "0.7.45", features = ["validation"] }
bytecheck = "0.7.0"
ollama-rs = "0.2.4"
schemars = "0.8.21"
