[package]
name = "acrostic-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acrostic-core = { path = "../core" }
futures-util = "0.3.31"
warp = { version = "0.3.7", features = ["tls"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
parking_lot = "0.12.3"
serde_json = "1.0.135"
anyhow = "1.0.95"
clap = { version = "4.5", features = ["derive"] }
simple-logging = "2.0.2"
log = "0.4.25"
